// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSpecifiedPages should only choose selected 1`] = `
Array [
  "/_app.js",
  "/_document.js",
  "/a.js",
]
`;

exports[`getSpecifiedPages should only choose selected 2`] = `
Array [
  "/_app.js",
  "/_document.js",
  "/a.js",
  "/b.jsx",
]
`;

exports[`getSpecifiedPages should only choose selected 3`] = `
Array [
  "/_app.js",
  "/_document.js",
  "/a.js",
  "/b.jsx",
]
`;

exports[`getSpecifiedPages should only choose selected 4`] = `
Array [
  "/_app.js",
  "/_document.js",
  "/a.js",
  "/b.jsx",
  "/c/index.mdx",
]
`;
